mongodb dump and restore

--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,7 @@ c/*.o
 !c/**/
 !c/**/*.c
 !c/**/*.h
-!c/**/lib/
-!c/**/lib/*.a
-!c/**/lib/*.h
+!c/**/*.a
 !c/**/Makefile*
 
 # Scala
@@ -30,3 +28,5 @@ node/**/package-lock.json
 python/**/.venv
 python/**/__pycache__/
 
+# mongodb
+mongodb/backup
