--- a/oracle/node/package.json
+++ b/oracle/node/package.json
@@ -8,5 +8,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "body-parser": "^2.2.0",
+    "express": "^4.21.2",
+    "oracledb": "^6.8.0",
+    "path": "^0.12.7"
+  }
 }
