--- a/node/package.json
+++ b/node/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "axios": "^1.8.4",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
+    "http": "^0.0.1-security",
     "morgan": "^1.10.0",
     "mysql2": "^3.14.0",
     "path": "^0.12.7",
