--- a/node/s3/package.json
+++ b/node/s3/package.json
@@ -14,9 +14,11 @@
     "body-parser": "^2.2.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
+    "ejs": "^3.1.10",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "path": "^0.12.7"
   }
 }
