--- a/docker/layer2/Dockerfile
+++ b/docker/layer2/Dockerfile
@@ -3,7 +3,7 @@ FROM ubuntu:latest
 
 # install
 RUN apt -y update; apt -y upgrade
-RUN apt -y install nginx 
-RUN apt -y install php
-RUN apt -y install php-mbstring
-RUN apt -y install php-pear
+RUN apt -y install nginx \
+                    php \
+                    php-mbstring \
+                    php-pear
