--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,7 @@ mongodb/backup
 oracle/node/dbConfig.js
 oracle/**/node_modules
 oracle/**/package-lock.json
+
+## docker
+docker/mysql/mysql*
+docker/mongodb/mongo*
