--- a/node/package.json
+++ b/node/package.json
@@ -5,7 +5,9 @@
     "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "http": "^0.0.1-security",
+    "impelfin-npm-deploy": "^1.0.2",
     "morgan": "^1.10.0",
+    "mynsun-npm-deploy": "^1.0.2",
     "mysql2": "^3.14.0",
     "path": "^0.12.7",
     "xhr2": "^0.2.1"
