--- a/k8s/k8s_remote/Makefile
+++ b/k8s/k8s_remote/Makefile
@@ -1,17 +1,20 @@
+# === 전체 워크플로우 ===
 all : build run k8init appdep appsvc getdep getsvc getpod
-restart : delsvc deldep delpod appdep appsvc getdep getsvc getpod
-stop : delsvc deldep delpod
+restart: k8stop appdep appsvc getdep getsvc getpod
+stop: k8stop dockerstop
+
+# === Docker 빌드 및 실행 ===
 build:
 	docker build -t remote .
 run:
 	docker run -it -d -p 8000:8000 --name remote remote
-exec:
+exec:    
 	docker exec -it remote /bin/bash
-start:
+dstart:
 	docker start remote
-stop:
+dstop:
 	docker stop remote
-logs:
+dlogs:
 	docker logs remote
 ps:
 	docker ps -a
@@ -22,33 +25,58 @@ rm:
 rmi:
 	docker rmi -f $$(docker images -q)
 
-k8init:
+# === Kubernetes 초기화 ===
+k8init: k8commit k8clean
+
+k8commit:
 	docker commit remote remoteapi
 	docker tag remoteapi mynsunxx/remoteapi
 	docker push mynsunxx/remoteapi
+
+k8clean:
 	docker rm -f $$(docker ps -aq)
 	docker rmi -f $$(docker images -q)
-getnode:
-	kubectl get nodes
+
+# === Kubernetes 명령 ===
 appdep:
 	kubectl apply -f deployment.yaml
+
 appsvc:
 	kubectl apply -f service.yaml
+
 getdep:
 	kubectl get deployment
+
 getsvc:
 	kubectl get svc -o wide
+
 getpod:
 	kubectl get pod -o wide
+
+getnode:
+	kubectl get nodes
+
+klogs:
+	kubectl logs $$(kubectl get pod --no-headers | grep remoteapi | awk '{print $$1}')
+
+# === Kubernetes 삭제 ===
+k8stop: delsvc deldep delpod
+
 delsvc:
 	kubectl delete svc remoteapi
+
 deldep:
 	kubectl delete deployment remoteapi
+
 delpod:
-	kubectl get pod | grep remoteapi | awk '{print $$1}' | xargs -I {} kubectl delete pod {} --force
+	kubectl get pod --no-headers | grep remoteapi | awk '{print $$1}' | xargs -r -I {} kubectl delete pod {} --force
+
+# === Kubernetes 상세 정보 ===
 desdep:
 	kubectl describe deployment remoteapi
+
 dessvc:
 	kubectl describe svc remoteapi
+
 despod:
-	kubectl describe pod remoteapi
+	kubectl describe pod $$(kubectl get pod --no-headers | grep remoteapi | awk '{print $$1}')
