--- a/.gitignore
+++ b/.gitignore
@@ -31,8 +31,8 @@ node/**/.serverless
 ## python
 .idea
 secret.json
-python/**/.venv
-python/**/__pycache__/
+**/.venv
+**/__pycache__/
 **/ secret.json
 
 # mongodb
